# nanoplan

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TODO.md  index.html  manifest.webmanifest  mise.toml  rust-toolchain.toml
.github/workflows/: deploy.yml
docs/: SETUP.md  USAGE.md
docs/adr/: 0001-road-parameter-object.md  0002-metric-strategy-table.md  0003-planner-spec-registry.md  0004-scenario-source-strategy.md  0005-shared-qmc-sampling-interface.md  README.md
scenarios/: web_bundle.json
scenarios/commonroad/: README.md  ZAM_AcceleratingFromStop-1_1_T-1.xml  ZAM_BidirectionalIntersection-1_1_T-1.xml  ZAM_BrakingLead-1_1_T-1.xml  ZAM_ChangingLaneCutIn-1_1_T-1.xml  ZAM_CongestedStopAndGo-1_1_T-1.xml  ZAM_CrossingTraffic-1_1_T-1.xml  ZAM_CrossingTrafficHighSpeed-1_1_T-1.xml  ZAM_CutIn-1_1_T-1.xml  ZAM_FollowingLeadAtSpeed-1_1_T-1.xml  ZAM_HighLateralAcceleration-1_1_T-1.xml  ZAM_HighSpeedHighwayCruise-1_1_T-1.xml  ZAM_LowSpeedResidential-1_1_T-1.xml  ZAM_MergingOntoHighway-1_1_T-1.xml  ZAM_NarrowConstructionZone-1_1_T-1.xml  ZAM_NearMultipleVehicles-1_1_T-1.xml  ZAM_OncomingOnNarrowRoad-1_1_T-1.xml  ZAM_OncomingTraffic-1_1_T-1.xml  ZAM_PedestrianCrossing-1_1_T-1.xml  ZAM_RoundaboutLikeCurve-1_1_T-1.xml  ZAM_SCurveRoad-1_1_T-1.xml  ZAM_SchoolZone-1_1_T-1.xml  ZAM_StartingLeftTurn-1_1_T-1.xml  ZAM_StartingRightTurn-1_1_T-1.xml  ZAM_StationaryLead-1_1_T-1.xml  ZAM_StoppingWithLead-1_1_T-1.xml
scenarios/json/: braking_lead.json  cut_in.json
scenarios/nuplan/: README.md
src/: barrier.rs  geometry.rs  lib.rs  main.rs  math.rs  metrics.rs  pi2ddp.rs  planners.rs  prediction.rs  profile.rs  rng.rs  scenario.rs  track.rs  vehicle.rs
src/common/: differencing.rs  interp.rs  kinematics.rs  linalg.rs  math.rs  measure.rs  mod.rs  rng.rs  state_control.rs
src/common/types/: control.rs  mod.rs  pose.rs  position.rs  state.rs
src/geometry/: barrier.rs  curvature.rs  distance.rs  footprint.rs  mod.rs  polygon.rs  road_polygon.rs
src/metrics/: README.md  aggregation.rs  mod.rs
src/metrics/collisions/: mod.rs
src/metrics/comfort/: mod.rs
src/metrics/drivable_area/: mod.rs
src/metrics/driving_direction/: mod.rs
src/metrics/lane_keeping/: mod.rs
src/metrics/making_progress/: mod.rs
src/metrics/progress/: mod.rs
src/metrics/safety/: mod.rs
src/metrics/speed_limit/: mod.rs
src/metrics/ttc/: mod.rs
src/planning/: README.md  constraints.rs  cost.rs  diagnostics.rs  latency.rs  mod.rs  model.rs  planner_math.rs  policy.rs  sampling.rs  search_tree.rs  steering.rs  trajectory_cost.rs
src/planning/basic/: mod.rs
src/planning/bezier_idm/: mod.rs
src/planning/bezier_toppra/: mod.rs
src/planning/lattice/: mod.rs
src/planning/pi2ddp/: mod.rs
src/planning/planner_math/: linalg.rs  matrix.rs  trajectory_cost.rs  vector.rs
src/planning/rrt_star/: mod.rs
src/planning/sampling_mpc/: cem.rs  mod.rs  mppi.rs  ps.rs
src/planning/straight/: mod.rs
src/planning/treetop/: ilqr.rs  mod.rs  rrt.rs
src/routing/: mod.rs
src/scenarios/: README.md  mod.rs
src/simulation/: README.md  collision.rs  integration.rs  mod.rs  physics.rs  state_control.rs
src/track/: README.md  catalog.rs  circuit.rs  loader.rs  mod.rs  model.rs  path.rs  presets.rs  road.rs  track.rs  trained_model.json
src/tuning/: README.md  mod.rs
src/viewer/: README.md  carpet.rs  color_conversion.rs  colors.rs  draw.rs  friction_box.rs  live.rs  loader.rs  mod.rs  rollouts.rs  scenarios.rs  sim.rs  ui.rs  web.rs
src/viewer/live/: camera.rs  carpet.rs  mod.rs  primitives.rs  rendering.rs  screen.rs  tests.rs
src/viewer/live/drawing/: carpet.rs  config.rs  diagnostics.rs  grid.rs  mod.rs  plan.rs  track.rs  vehicles.rs
src/viewer/ui/: hud.rs  landing.rs  mod.rs  portrait_prompt.rs  style.rs  tests.rs  timeseries.rs  tutorial.rs  visualization.rs
src/viewer/ui/controls/: camera.rs  metrics.rs  mod.rs  opponents.rs  planner.rs  timing.rs  visibility.rs
src/viewer/ui/widgets/: acceleration_bar.rs  curvature_bar.rs  friction_box.rs  lap_stats.rs  mod.rs  speedometer.rs
src/world/: README.md  mod.rs
tools/: build_timings.py  bundle_web_scenarios.py  export_commonroad_scenarios.py  export_nuplan_scenarios.py  generate_diverse_scenarios.py  load_commonroad_scenarios.py  profile.rs
