[package]
name = "nanoplan"
version = "0.1.0"
edition = "2024"
description = "Ultra minimalist motion planner for car-like vehicles based on trajectory trees and sampling-based DDP"
license = "MIT"

[dependencies]
# trimmed for wasm size: 2d rendering only, no 3d/ui/audio/scene/picking
bevy = { version = "0.19", default-features = false, features = [
    "default_app",
    "default_platform",
    "2d_bevy_render",
    "bevy_picking", # bevy_egui's pointer integration needs it
] }
bevy_egui = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ponytail: bevy is slow to compile unoptimized; standard bevy dev-profile setup
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# size over speed: keeps the wasm binary web-deployable
[profile.release]
opt-level = "s"
lto = "thin"
strip = "debuginfo"
